2 этап(iter 63)