@@ -81,7 +81,7 @@ public class EventServiceImpl implements EventService {
         log.info("getPublicEvent called with parameters: text='{}', categories={}, paid={}, rangeStart={}, rangeEnd={}, onlyAvailable={}, sort={}, from={}, size={}",
                 text, categories, paid, rangeStart, rangeEnd, onlyAvailable, sort, from, size);
 
-
+        statsClient.sendHit();
         String lowText = text.toLowerCase().replace("\"", "");
 
         List<Event> events;
@@ -157,9 +157,9 @@ public class EventServiceImpl implements EventService {
         Event event = eventRepository.getPublicEventById(eventId)
                 .orElseThrow(() -> new NotFoundException("Event with id=" + eventId + " was not found"));
         if (event.getState().equals(EveState.PUBLISHED)) {
-
+            statsClient.sendHitId(eventId);
             try {
-                Thread.sleep(1000);
+                Thread.sleep(1000); // Задержка 1 секунда для синхронизации
             } catch (InterruptedException e) {
                 Thread.currentThread().interrupt();
                 throw new RuntimeException("Ошибка задержки: " + e.getMessage(), e);
@@ -169,17 +169,7 @@ public class EventServiceImpl implements EventService {
         String start = eventDtoOut.getCreatedOn();
         String end = LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss"));
         String[] uris = {"/events/" + event.getId()};
-        LocalDateTime startTime = LocalDateTime.parse(start, DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss"));
-        LocalDateTime endTime = LocalDateTime.parse(end, DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss"));
-        List<String> uriList = Arrays.asList(uris);
-
-        List<ViewStatsDto> stats = statsClient.getStats(startTime, endTime, uriList, true);
-
-        if (stats != null && !stats.isEmpty()) {
-            eventDtoOut.setViews(stats.get(0).getHits().intValue());
-        } else {
-            eventDtoOut.setViews(0);
-        }
+        eventDtoOut.setViews(statsClient.getHits(start, end, uris, true).getFirst().getHits());
         return eventDtoOut;
     }
 
